refactor: used Java 21 getFirst()